--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fontend-dashboard",
+  "name": "devops-lab-frontend-dashboard",
   "type": "module",
   "private": true,
   "scripts": {
@@ -7,14 +7,18 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "typecheck": "nuxt typecheck"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "mqtt": "^5.14.1",
     "nuxt": "^4.2.1",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "chart.js": "^4.4.1",
+    "vue-chartjs": "^5.3.0"
   },
   "devDependencies": {
     "@nuxt/icon": "^2.1.0",
